<resources>
    <string name="app_name">CarPool</string>
    <string name="home_login_button">Login</string>
    <string name="home_reg_button">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_success">Login successful</string>
    <string name="login_fail">Login unsuccessful</string>
    <string name="register_success">Register successful</string>
    <string name="register_fail">Register unsuccessful</string>
    <string name="add_travel">Add new travel</string>
    <string name="start_point">Starting point</string>
    <string name="end_point">Ending point</string>
    <string name="depart_time">Departure time</string>
    <string name="add_new_travel_button">Add new travel</string>
    <string name="reserve_travel">Reserve your spot</string>
    <string name="unreserve_travel">Remove your reservation</string>
    <string name="list_type_button">List of travels</string>
    <string name="map_type_button">Map of travels</string>

</resources>
